--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
                     <h3 class="pick-date1">Chọn ngày bắt đầu: </h3>
                         <input type="date" id="input-start-day" name="">
                         <input type="checkbox" name="" id="checkbox-start-day" onclick="checkStartDay(today)">
-                        <label class="lable"  for="">Hôm nay</label>
+                        <label class="lable1"  for="">Hôm nay</label>
              </div>
              <div class="end-day">
                     <h3 class="pick-date2">Chọn ngày kết thúc: </h3>
                         <input type="date" id="input-end-day" name="">
                         <input type="checkbox" name="" id="checkbox-end-day"  onclick="checkEndDay(today)">
-                        <label class="lable" for="">Hôm nay</label>
+                        <label class="lable2" for="">Hôm nay</label>
              </div>
              <div class="confirm">
                     <button class="confirm-date" type="button" onclick="dateCalculation()">Xác nhận!</button>
